# nativity_quest

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.adoc
assets/: CMakeLists.txt  char.json  char.xcf  combat_hud.json  enemies.json  game.json  inventory_grid.json  inventory_view_hud.json  items.json  map.json  map.xcf  menu.json  monster.xcf  navigate_hud.json  navigation_sprites.json  pie.xcf  player.json  sprites.json  win_hud.json  zones.json  zones.xcf
assets/decl/: enemies.json  items.json  players.json
assets/lang/: english.json  latin.json
assets/ui/: combat.json  inventory.json  menu.json  navigate.json  uncrate.json  win.json
assets/ui_part/: combat_grid.json  inventory_grid.json
cmake/Modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  data_target.cmake
jsoncpp/: CMakeLists.txt
ponglib/: CMakeLists.txt
ponglib/pong/: CMakeLists.txt
ponglib/pong/common/: Cache_Impl.hpp  ID_Map.hpp  template_utility.hpp
ponglib/pong/common/pif/: Enum.hpp  Object.hpp  Tuple.hpp  (+1 more)
ponglib/pong/io/: CMakeLists.txt  Logger.cpp  Logger.h
ponglib/pong/plugin/: plugins.cpp  req.cpp  req.h  response.cpp  response.h
ponglib/pong/render/: CMakeLists.txt  color.h  text.h
src/: CMakeLists.txt  Color.cpp  Color.h  Combat_Control.cpp  Combat_Control.h  Discard_Item_Control.cpp  Discard_Item_Control.h  Enemy_Instance.h  Entity_Data.h  Entity_Health_Mediator.cpp  Entity_Health_Mediator.h  Font_Renderer.h  Graphics_Desc.cpp  Graphics_Desc.h  Inventory_View_Control.cpp  Inventory_View_Control.h  Label_View.h  Map.cpp  Map.h  Player.cpp  Player.h  Player_Health_Mediator.cpp  Player_Health_Mediator.h  Sprite.cpp  Sprite.h  Sprite_Container.cpp  Sprite_Container.h  State.cpp  State.h  Vanilla_Control.cpp  Vanilla_Control.h  effects.cpp  effects.h  event.cpp  event.h  main.cpp  player.cpp  player.h  render.cpp  render.h  (+6 more)
src/assets/: CMakeLists.txt  asset.cpp  asset.h  assets.h  describe.h  discovery.cpp  discovery.h  find.h  load.cpp  load.h
src/assets/desc/: game.cpp  game.h  items.cpp  items.h  lang.cpp  lang.h
src/common/: CMakeLists.txt  Cache.h  Cache_Impl.hpp  Color.h  ID_Gen.hpp  ID_Map.hpp  Timer.hpp  animation.cpp  animation.h  center.hpp  except.h  json.h  log.cpp  log.h  pi.h  rect.h  render.cpp  render.h  surface.cpp  surface.h  template_utility.hpp  translate.cpp  translate.h  vec.h  volume.h
src/decl/: CMakeLists.txt  char.cpp  char.h  combat.cpp  combat.h  effects.cpp  effects.h  enemies.cpp  enemies.h  game.cpp  game.h  heros.cpp  heros.h  items.cpp  items.h  players.cpp  players.h  sprites.cpp  sprites.h  zones.cpp  zones.h
src/decl/impl/: item_impl.h  item_parse.cpp  item_parse.h  zone_class.cpp  zone_class.h  zone_impl.h  zone_parse.cpp  zone_parse.h
src/game/: CMakeLists.txt  Font_Renderer.cpp  Font_Renderer.h  Game.cpp  Game.h  Graphics_Desc.cpp  Graphics_Desc.h
src/states/: CMakeLists.txt  combat.cpp  combat.h  combat_intro.cpp  combat_intro.h  discard.cpp  discard.h  flare.cpp  flare.h  intro.cpp  intro.h  inventory.cpp  inventory.h  menu.cpp  menu.h  move.cpp  navigate.cpp  navigate.h  player_intro.cpp  player_intro.h  player_switch.cpp  player_switch.h  uncrate.cpp  uncrate.h  view_hud.cpp  view_hud.h  win.cpp  win.h
src/ui/: CMakeLists.txt  Event_Trigger.h  Model.cpp  Model.h  Presenter.cpp  Presenter.h  View.cpp  View.h  View_Container.h  View_Container_impl.hpp  View_Container_inline.hpp  load.cpp  load.h  ui.h
src/ui/layouts/: grid_layout.cpp  grid_layout.h  linear_layout.cpp  linear_layout.h  side_layout.cpp  side_layout.h
src/ui/triggers/: Mouse_Click.cpp  Mouse_Click.h  Mouse_Click_Trigger.cpp  Mouse_Click_Trigger.h  Mouse_Hover.cpp  Mouse_Hover.h
src/ui/views/: bar.cpp  bar.h  empty.h  label.cpp  label.h  sprite.cpp  sprite.h
src/util/: CMakeLists.txt  except.h  json.cpp  json.h  surface.h
src/views/: CMakeLists.txt  combat.cpp  combat.h  discard.cpp  discard.h  inventory.cpp  inventory.h  menu.cpp  menu.h  move.cpp  move.h  navigate.cpp  navigate.h  player_intro.cpp  player_intro.h  player_switch.cpp  trade.cpp  trade.h  turn.cpp  turn.h  uncrate.cpp  uncrate.h  win.h
test/: CMakeLists.txt  main.cpp
(+2 files in other folders)
